hw-03/answer_exercise_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-server
  labels:
    app: nginx-server
  namespace: part-second
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
      - name: nginx-server
        image: nginx:1.19.4
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 20m
            memory: 128Mi
          requests:
            cpu: 20m
            memory: 128Mi
