hw-03/answer_exercise_1/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-svc
  namespace: part-second
spec:
  selector:
    app: nginx-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
